Try to fix x-overflow css issue on heroku.

--- a/app/assets/stylesheets/dest.css.scss
+++ b/app/assets/stylesheets/dest.css.scss
@@ -56,6 +56,7 @@ body {
 .listing {
   height: 500px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .flex-vert {
